# tournamentor

./: .gitignore  manage.py  pyproject.toml
accounts/: models.py
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/tournament/: admin.py  models.py
apps/tournament/migrations/: 0001_initial.py
tourmentor/: asgi.py  settings.py  urls.py  wsgi.py
